 * Page chooser now opens at the deepest ancestor page that covers all the pages of the required page type (Tim Heap)
 * `PageChooserBlock` now accepts a `target_model` option to specify the required page type (Tim Heap)
 * Modeladmin forms now respect `fields` / `exclude` options passed on custom model forms (Thejaswi Puthraya)
 * Added new StreamField block type `StaticBlock` (Benoît Vogel)
 * Updated Cloudflare cache module to use the v4 API (Albert O'Connor)
 * Added `exclude_from_explorer` attribute to the `ModelAdmin` class to allow hiding instances of a page type from Wagtail's explorer views (Andy Babic)
 * Added `above_login`, `below_login`, `fields` and `login_form` customisation blocks to the login page template (Tim Heap)
 * `ChoiceBlock` now accepts a callable as the choices list (Mikalai Radchuk)
 * Fix: `AbstractForm` now respects custom `get_template` methods on the page model (Gagaro)
 * Fix: Use specific page model for the parent page in the explore index (Gagaro)
 * Fix: Remove responsive styles in embed when there is no ratio available (Gagaro)
 * Fix: Parent page link in page search modal no longer disappears on hover (Dan Braghis)
 * Fix: ModelAdmin views now consistently call `get_context_data` (Andy Babic)
 * Fix: Header for search results on the redirects index page now shows the correct count when the listing is paginated (Nick Smith)
 * Fix: `set_url_paths` management command is now compatible with Django 1.10 (Benjamin Bach)
 * Fix: Form builder email notifications now output multiple values correctly (Sævar Öfjörð Magnússon)
 * Fix: Closing 'more' dropdown on explorer no longer jumps to the top of the page (Ducky)
 * Fix: Users with only publish permission are no longer given implicit permission to delete pages (Matt Westcott)
 * Fix: `search_garbage_collect` management command now works when wagtailsearchpromotions is not installed (Morgan Aubert)